--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-   <title>USERFAIL</title>
+   <title>INTERFAIL</title>
    <meta charset="UTF-8">
    <meta name="description" content="An interactive game that shows bad UX design">
    <meta name="author" content="Jackie Ochoa">
